2006-07-20  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-log.cc: Add translator comments, and mark up log
	abbreviations for translation.

2006-07-20  Roger Leigh  <rleigh@debian.org>

	* TODO: Remove completed item.

	* Added a number of debugging messages to important codepaths.

2006-07-19  Roger Leigh  <rleigh@debian.org>

	* po/vi.po: Restore unmaintained translation, but leave out of
	LINGUAS.

2006-07-19  Roger Leigh  <rleigh@debian.org>

	* po/sv.po: Update Swedish translation.

2006-07-19  Roger Leigh  <rleigh@debian.org>

	* po/en_GB.po: Update.

	* Add translator comments for ellipsis (...) in translatable
	strings.

2006-07-19  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Close #378469.

2006-07-19  Roger Leigh  <rleigh@debian.org>

	* NEWS: Document terminal state save and restore behaviour.

	* sbuild/sbuild-session.cc
	(save_termios): New method.  Save terminal state.
	(restore_termios): New method.  Restore terminal state.
	(run_impl): Save and restore terminal state between opening and
	closing the session.

	* sbuild/sbuild-session.h: Add saved_termios and termios_ok
	members.

	* schroot/schroot-base-main.cc (run): Remove termios save and
	restore.

2006-07-19  Roger Leigh  <rleigh@debian.org>

	* po/LINGUAS: Remove vi.

	* po/vi.po: Remove currently unmaintained translation.

	* po/en_GB.po: Update

	* Add translation comments documenting all format string arguments
	before all translatable strings with %n% format modifers.

2006-07-18  Luk Claes  <luk@debian.org>

	* po/sv.po: Update Swedish translation.

2006-07-17  Roger Leigh  <rleigh@debian.org>

	* dchroot/dchroot.1.in, dchroot-dsa/dchroot-dsa.1.in: Remove
	accidentally committed SVN conflict markers.

2006-07-17  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-auth-conv-tty.cc
	(get_delay): Fix incorrectly named function call.

2006-07-17  Roger Leigh  <rleigh@debian.org>

	* TODO: Remove completed item.

	* po/en_GB.po: Update translation.
